--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 :root {
     --primary-color: #FFC0CB; /* Pink color for the primary theme */
     --secondary-color: #f4f4f4; /* Secondary color remains light grey */
+    --button-color: #0000FF; /*button color*/
     --text-color: #333; /* Text color remains dark grey */
     --font-stack: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -74,7 +75,7 @@ nav a:hover {
 .btn-primary {
     display: inline-block;
     background: var(--secondary-color);
-    color: var(--primary-color);
+    color: var(--button-color);
     padding: 10px 25px;
     border: none;
     border-radius: 5px;
