--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ nav a:hover {
 }
 
 .btn {
-    background-color: var(--primary-color);
+    background-color: var(--button-color);
     color: #fff;
     padding: 10px 30px;
     border-radius: 5px;
@@ -228,7 +228,7 @@ footer {
 
 .btn {
     display: inline-block;
-    background-color: var(--primary-color);
+    background-color: var(--button-color);
     color: #fff;
     padding: 10px 30px;
     font-size: 1.1rem;
@@ -319,7 +319,7 @@ footer {
 }
 
 .btn:hover {
-    background-color: darken(var(--primary-color), 10%);
+    background-color: darken(var(--button-color), 10%);
 }
 
 /* Ensure you have the primary and secondary color variables defined in your :root selector */
