--- a/styles.css
+++ b/styles.css
@@ -300,7 +300,7 @@ footer {
 }
 
 .community-links .btn {
-    background-color: var(--primary-color);
+    background-color: var(--button-color);
     color: #fff;
     padding: 10px 30px;
     border-radius: 5px;
@@ -319,7 +319,7 @@ footer {
 }
 
 .btn:hover {
-    background-color: darken(var(--button-color), 10%);
+    background-color: darken(var(--button-color), 30%);
 }
 
 /* Ensure you have the primary and secondary color variables defined in your :root selector */
