--- a/styles.css
+++ b/styles.css
@@ -16,27 +16,64 @@ body {
     font-family: var(--font-stack);
     line-height: 1.6;
     color: var(--text-color);
+background-color: dark-grey;
 }
 
 .container {
-    max-width: 1200px;
+    /*x-width: 1200px;*/
+    width: 100%;
     margin: 0 auto;
     padding: 0 20px;
 }
 
 header {
     background: var(--primary-color);
-    color: #fff;
-    padding: 1rem 0;
-    text-align: center;
+    display: flex;
+    align-items: center;
+  /*  flex-direction: column; /* Stack items vertically */
+   justify-content: space-between; /* Align items on the ends */
+    padding: 20px;
+}
+.header-content {
+    display: flex;
+    justify-content: space-between; /* Distribute items along the main axis */
+    align-items: center;
+}
+.header-logo {
+    width: 150px; /* Adjust the width as needed */
+    height: auto;
+    float: left;
+    margin-right: 20px; /* Space between the image and the text */
+
+}
+.container nav {
+  align-items: right;
 }
 
+header p {
+    margin: 0;
+    font-size: 1.2em;
+    color: #666; /* Optional: Text color for the description */
+}
 .logo {
-    font-size: 2.5rem;
+    margin: 0;
+    font-size: 2em;
+   /* text-align: left; /* Center align the text */
+}
+.logo-container {
+    display: flex;
+    flex-direction: column; /* Stack items vertically */
 }
 
+.logo-container h1,
+.logo-container p {
+    margin: 0;
+}
 nav ul {
     list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
 }
 
 nav ul li {
@@ -86,7 +123,10 @@ nav a:hover {
 
 .section-bg {
     background: var(--secondary-color);
-    padding: 50px 0;
+   /* padding: 50px 0;*/
+    position: relative;
+    padding: 20px;
+
 }
 /* Styles for Open Source Collaboration Section */
 .open-source-section {
@@ -171,16 +211,28 @@ nav a:hover {
     text-align: center;
 }
 
-.feature {
-    padding: 20px;
-    background: #fff;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+.features-grid {
+    display: flex;
+    overflow: hidden;
+    position: relative;
+    width: 100%; /* Ensure the width of the container is defined */
 }
 
-.feature-icon {
-    font-size: 3rem;
-    margin-bottom: 10px;
+
+.feature {
+    flex: 0 0 30%;
+    box-sizing: border-box;
+    padding: 20px; /* Added padding for better text readability */
+    transition: transform 1s ease-in-out, opacity 1s ease-in-out;
+    opacity: 0;
+    background-color:  #F0F0F0;
+    color: #000000; /* Ensures text color is black */
+    border-radius: 15px; /* Add rounded corners */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Add a subtle shadow for better visual effect */
+}
+
+.feature.visible {
+    opacity: 1; /* Make visible features fully opaque */
 }
 
 footer {
@@ -197,7 +249,7 @@ footer {
 }
 
 #streaming-companion .content-wrap {
-    max-width: 800px;
+    max-width: 80%;
     margin: 0 auto;
     padding: 0 20px;
 }
